[gd_scene load_steps=18 format=3 uid="uid://cy4dfmjr88k02"]

[ext_resource type="Script" path="res://mob.gd" id="1_1crrg"]
[ext_resource type="Texture2D" uid="uid://bqojnv0r6ifw2" path="res://текстуры/drone.png" id="2_5limf"]
[ext_resource type="PackedScene" uid="uid://bys2fq87tspfr" path="res://bullet_DRONE.tscn" id="2_r605y"]
[ext_resource type="Script" path="res://Area2D.gd" id="3_ndglu"]
[ext_resource type="Texture2D" uid="uid://cvnyc5d1bfy3d" path="res://текстуры/Untitled 07-22-2024 10-16-07.png" id="3_p8wik"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ci2au"]
size = Vector2(101, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0wg7"]
atlas = ExtResource("2_5limf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixxkn"]
atlas = ExtResource("2_5limf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4l3h"]
atlas = ExtResource("2_5limf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ho1"]
atlas = ExtResource("2_5limf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts5pd"]
atlas = ExtResource("2_5limf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0agm1"]
atlas = ExtResource("2_5limf")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0c3h4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0wg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixxkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4l3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ho1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts5pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0agm1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hq4k5"]
radius = 231.0
height = 482.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha4c4"]
size = Vector2(99, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhalw"]
size = Vector2(100, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2fci"]
size = Vector2(37, 11)

[node name="mob" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_1crrg")
bullet = ExtResource("2_r605y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(47, 127)
shape = SubResource("RectangleShape2D_ci2au")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(47, 111)
scale = Vector2(4.17188, 4.17188)
sprite_frames = SubResource("SpriteFrames_0c3h4")
autoplay = "default"

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2(50, 125)
shape = SubResource("CapsuleShape2D_hq4k5")

[node name="death" type="Area2D" parent="."]
position = Vector2(14, 113)

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
position = Vector2(33.5, 16.5)
shape = SubResource("RectangleShape2D_ha4c4")

[node name="death2" type="Area2D" parent="."]
position = Vector2(13, 112)

[node name="CollisionShape2D" type="CollisionShape2D" parent="death2"]
position = Vector2(34, 17.5)
shape = SubResource("RectangleShape2D_nhalw")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(47, 129)
script = ExtResource("3_ndglu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(14, -2)
shape = SubResource("RectangleShape2D_w2fci")

[node name="Untitled07-22-202410-16-07" type="Sprite2D" parent="Area2D"]
position = Vector2(0, -21)
scale = Vector2(4.15625, 4.15625)
texture = ExtResource("3_p8wik")

[node name="Marker2D" type="Marker2D" parent="Area2D"]
position = Vector2(28, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="area_entered" from="death" to="." method="_on_death_area_entered"]
[connection signal="body_entered" from="death" to="." method="_on_death_body_entered"]
[connection signal="area_shape_entered" from="death2" to="." method="_on_death_2_area_shape_entered"]
[connection signal="body_entered" from="death2" to="." method="_on_death_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
